--- a/packages/core/src/components/rtk-paginated-list/rtk-paginated-list.css
+++ b/packages/core/src/components/rtk-paginated-list/rtk-paginated-list.css
@@ -23,6 +23,10 @@
   }
 }
 
+.private-chat-unread-badge {
+  @apply bg-brand-500 h-2 w-2 rounded-full;
+}
+
 :host(.pinned-message-selector-paginated-list) {
   .container {
     @apply box-border flex flex-col-reverse p-2;
